--- a/CSS/drumKit.css
+++ b/CSS/drumKit.css
@@ -5,10 +5,7 @@ body {
 }
 
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -80%);
+    margin-top: 3em;
 }
 
 .keys {
