--- a/CSS/drumKit.css
+++ b/CSS/drumKit.css
@@ -5,10 +5,8 @@ body {
 }
 
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -80%);
+    position: relative;
+    top: 11em;
 }
 
 .keys {
@@ -29,4 +27,10 @@ body {
 
 .playing {
     transform: scale(0.8);
+}
+
+@media screen and (max-width: 992px) {
+    .container {
+        top: 6em;
+    }
 }
